--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
+    "node-gyp": "^3.8.0",
+    "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.8.0"
