--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "material-ui-image": "^3.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-countdown-now": "^1.3.0",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
