--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "react": "^16.5.2",
     "react-countdown-now": "^1.3.0",
     "react-dom": "^16.5.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0"
   },
